Fix mobile phone double scrollbars issue. The double scrollbars are caused by browser's bottem navigation bar.

--- a/lingxijiao/src/ui/components/posts.module.scss
+++ b/lingxijiao/src/ui/components/posts.module.scss
@@ -11,6 +11,7 @@
 
 .posts { 
     justify-content: space-evenly;
+    margin-bottom: 20vh;
 
     .post {
         border-radius: 20px !important;
